--- a/xiaowei/Three_column_layout.html
+++ b/xiaowei/Three_column_layout.html
@@ -74,7 +74,8 @@
     		<h4>通吃百度前端关卡，挑战boss</h4>
     		<p>重要说明 百度前端技术学院的课程任务是由百度前端工程师专为对前端不同掌握程度的同学设计。我们尽力保证课程内容的质量以及学习难度的合理性，但即使如此，真正决定课程效果的，还是你的每一次思考和实践。 课程多数题目的解决方案都不是唯一的，这和我们在实际工作中的情况也是一致的。因此，我们的要求不仅仅是实现设计稿的效果，更是要多去思考不同的解决方案，评估不同方案的优劣，然后使用在该场景下最优雅的方式去实现。那些最终没有被我们采纳的方案，同样也可以</p><br />
     		<p>重要说明 百度前端技术学院的课程任务是由百度前端工程师专为对前端不同掌握程度的同学设计。我们尽力保证课程内容的质量以及学习难度的合理性，但即使如此，真正决定课程效果的，还是你的每一次思考和实践。 课程多数题目的解决方案都不是唯一的，这和我们在实际工作中的情况也是一致的。因此，我们的要求不仅仅是实现设计稿的效果，更是要多去思考不同的解决方案，评估不同方案的优劣，然后使用在该场景下最优雅的方式去实现。那些最终没有被我们采纳的方案，同样也可以</p><br />
-    		<p>重要说明 postion定位 设置的盒子margin值是从父盒子的margin内侧算的，而不是父盒子的padding内侧算，而一般父盒子的子盒子是从父盒子的padding内侧设置算起的。</p>
+    		<p>重要说明 百度前端技术学院的课程任务是由百度前端工程师专为对前端不同掌握程度的同学设计。我们尽力保证课程内容的质量以及学习难度的合理性，但即使如此，真正决定课程效果的，还是你的每一次思考和实践。 课程多数题目的解决方案都不是唯一的，这和我们在实际工作中的情况也是一致的。因此，我们的要求不仅仅是实现设计稿的效果，更是要多去思考不同的解决方案，评估不同方案的优劣，然后使用在该场景下最优雅的方式去实现。那些最终没有被我们采纳的方案，同样也可以</p><br />
+    		<p>重要说明 postion定位 设置的盒子margin值是从父盒子的margin内侧算的，而不是父盒子的padding内侧算，而一般父盒子的子盒子是从父盒子的padding内侧设置算起的。position 定位的盒子不会撑开父盒子，而普通盒子可以撑开父盒子.</p>
     		</div>
     	<div class="right">
     		<div>
