--- a/xiaowei/position.html
+++ b/xiaowei/position.html
@@ -4,37 +4,51 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<style type="text/css">
+			body{
+				margin: 0;
+				padding: 0;
+				min-height: 300px;
+			}
 			.contain{
 				width: 400px;
 				height: 200px;
-				margin: 300px auto 0;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				-moz-transform: translate(-50%,-50%);    /* Firefox */
+				-o-transform: translate(-50%,-50%);      /* Opera */
+				-ms-transform: translate(-50%,-50%);     /* IE 9 */
+				-webkit-transform: translate(-50%,-50%); /* Safari 和 Chrome */
+				transform: translate(-50%,-50%);
 				background-color: #ccc;
 				overflow: hidden;
-				position: relative;
 			}
-			.left,.right{
-				width: 50px;
-				height: 50px;
-				border-radius: 25px;
+			.left-top{
+				position: absolute;
+				top: -50px;
+				left: -50px;
+				width: 100px;
+				height: 100px;
+				border-radius: 50px;
 				background-color: #FFCC00;
 			}
-			.left{
+			.right-bottom{
 				position: absolute;
-				top: -18px;
-				left: -18px;
-			}
-			.right{
-				position: absolute;
-				bottom: -18px;
-				right: -18px;
+				bottom: -50px;
+				right: -50px;
+				width: 100px;
+				height: 100px;
+				border-radius: 50px;
+				background-color: #FFCC00;
 			}
 			
 		</style>
 	</head>
 	<body>
+		<!--疑问：父盒子设置绝对定位，子盒子也设置绝对定位，为什么子盒子的定位是在父盒子上-->
 		<div class="contain">
-			<div class="left"></div>
-			<div class="right"></div>
+			<div class="left-top"></div>
+			<div class="right-bottom"></div>
 		</div>
 	</body>
 </html>
